--- a/angular.json
+++ b/angular.json
@@ -23,7 +23,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "src/sass/styles.scss"
             ],
             "scripts": [],
             "es5BrowserSupport": true
@@ -80,7 +81,8 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "src/sass/styles.scss"
             ],
             "scripts": [],
             "assets": [
